--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "angle-printer",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Pretty print radians and degrees. Also converts between them.",
   "main": "angle-printer.js",
   "scripts": {
-    "test": "make test"
+    "test": "mocha --reporter spec"
   },
   "keywords": [
     "math",
@@ -15,9 +15,9 @@
     "pretty",
     "print"
   ],
-  "repository" :
-  { "type" : "git",
-   "url" : "https://github.com/Carpetfizz/angle-printer"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Carpetfizz/angle-printer"
   },
   "author": "Ajay Ramesh <ajayramesh.dev@gmail.com> (http://ajayramesh.com)",
   "licenses": [
